<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Schuss</string>
    <string name="where_to_rent">Where would you like to rent from?</string>
    <string name="welcome_msg">Welcome to Schuss! Please enter your information below.</string>
    <string name="email_address">E-mail Address</string>
    <string name="register">Sign In</string>
    <string name="please_wait">Please wait while we gather information for you.</string>
    <string name="password">Password</string>
    <string name="log_in">Log in to existing account</string>
    <string name="register_new">Register a new account</string>
    <string name="create_new">Create new account</string>
    <string name="sign_in">Sign in to existing account</string>
    <string name="my_people">My People</string>
    <string name="add_person">Add a Person</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="guardian_first_name">Guardian First Name</string>
    <string name="guardian_last_name">Guardian Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="downhill_profile">Downhill Skiing Profile</string>
    <string name="skier_type">Skier Type</string>
    <string name="boot_size">Boot Size</string>
    <string name="ski_length">Ski Length</string>
    <string name="pole_length">Pole Length</string>
    <string name="helmet_size">Helmet Size</string>
    <string name="my_rentals">My Rentals</string>
    <string name="add_request">Request a Rental</string>
    <string name="who_is_renting">Who are you renting for?</string>
    <string name="profiles">Profiles:</string>
    <string name="where">Where?</string>
    <string name="who_what">Who/What?</string>
    <string name="when">When?</string>
    <string name="arrival_time">Approximately when will you arrive at the rental shop?</string>
    <string name="confirm">Confirm</string>
    <string name="arrival_time_short">Arrival Time</string>
    <string name="renters">Renters</string>
    <string name="status">Status</string>
    <string name="add_profile">Add a profile</string>
    <string name="choose_provider">Choose a location from the list above...</string>
</resources>
